--- a/KendoUI/KendoUI.csproj
+++ b/KendoUI/KendoUI.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Kendo.Mvc">
       <HintPath>..\..\..\BackUpDataMSA\Data\2021\Library\Kendo UI\Kendo.Mvc.dll</HintPath>
     </Reference>
