--- a/OTPService/OTPService.csproj
+++ b/OTPService/OTPService.csproj
@@ -4,4 +4,20 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MSA.FW.Application">
+      <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA Lib\MSA.FW.Application.dll</HintPath>
+    </Reference>
+    <Reference Include="MSA.FW.BaseApp">
+      <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA Lib\MSA.FW.BaseApp.dll</HintPath>
+    </Reference>
+    <Reference Include="MSA.FW.BO">
+      <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA Lib\MSA.FW.BO.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
