--- a/OTPService/OTPService.csproj
+++ b/OTPService/OTPService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
   <ItemGroup>
@@ -17,6 +18,12 @@
     </Reference>
     <Reference Include="MSA.FW.BO">
       <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA Lib\MSA.FW.BO.dll</HintPath>
+    </Reference>
+    <Reference Include="MSA.Util.DALDapperHelper">
+      <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA_MES_DAL\MSA.Util.DALDapperHelper\bin\Release\netstandard2.1\MSA.Util.DALDapperHelper.dll</HintPath>
+    </Reference>
+    <Reference Include="MSA.Util.DapperHelper">
+      <HintPath>..\..\..\..\Source\MSAM_MES_DAL\MSA Lib\MSA.Util.DapperHelper.dll</HintPath>
     </Reference>
   </ItemGroup>
 
