--- a/Gigamall/Gigamall.csproj
+++ b/Gigamall/Gigamall.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="corepush" Version="3.0.10" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="newtonsoft.json" Version="13.0.1" />
+    <PackageReference Include="swashbuckle.aspnetcore" Version="6.3.1" />
   </ItemGroup>
 
 </Project>
